1.13.4/docs/UserDTO.md
# SongtradrApiClientRuby::UserDTO

## Properties

| Name | Type | Description | Notes |
| ---- | ---- | ----------- | ----- |
| **username** | **String** |  |  |
| **email_address** | **String** |  |  |
| **company_name** | **String** |  | [optional] |
| **is_admin** | **Boolean** |  |  |
| **full_search_allowed** | **Boolean** |  |  |
| **voice_search_allowed** | **Boolean** |  |  |
| **recording_detail_allowed** | **Boolean** |  |  |
| **artist_detail_allowed** | **Boolean** |  |  |
| **playlist_prediction_allowed** | **Boolean** |  |  |
| **widgets_allowed** | **Boolean** |  |  |
| **signup_allowed** | **Boolean** |  |  |
| **upload_allowed** | **Boolean** |  |  |
| **fingerprint_allowed** | **Boolean** |  |  |
| **audiotagging_allowed** | **Boolean** |  |  |
| **b2b_allowed** | **Boolean** |  |  |
| **editor_allowed** | **Boolean** |  |  |
| **insights_allowed** | **Boolean** |  |  |
| **genres_allowed** | **Boolean** |  |  |
| **moods_allowed** | **Boolean** |  |  |
| **instrumentation_allowed** | **Boolean** |  |  |
| **sound_features_allowed** | **Boolean** |  |  |
| **tonal_features_allowed** | **Boolean** |  |  |
| **rhythm_features_allowed** | **Boolean** |  |  |
| **audience_allowed** | **Boolean** |  |  |
| **origin_allowed** | **Boolean** |  |  |
| **quality_allowed** | **Boolean** |  |  |
| **reduced_musical_features** | **Boolean** |  |  |
| **confirmed** | **Boolean** |  |  |
| **language** | **String** |  |  |
| **admin** | **Boolean** |  | [optional] |

## Example

```ruby
require 'songtradr_api_client_ruby'

instance = SongtradrApiClientRuby::UserDTO.new(
  username: null,
  email_address: null,
  company_name: null,
  is_admin: null,
  full_search_allowed: null,
  voice_search_allowed: null,
  recording_detail_allowed: null,
  artist_detail_allowed: null,
  playlist_prediction_allowed: null,
  widgets_allowed: null,
  signup_allowed: null,
  upload_allowed: null,
  fingerprint_allowed: null,
  audiotagging_allowed: null,
  b2b_allowed: null,
  editor_allowed: null,
  insights_allowed: null,
  genres_allowed: null,
  moods_allowed: null,
  instrumentation_allowed: null,
  sound_features_allowed: null,
  tonal_features_allowed: null,
  rhythm_features_allowed: null,
  audience_allowed: null,
  origin_allowed: null,
  quality_allowed: null,
  reduced_musical_features: null,
  confirmed: null,
  language: null,
  admin: null
)
```

